fixed scrollbar

--- a/src/index.css
+++ b/src/index.css
@@ -9,5 +9,6 @@ body{
   display: block;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  height: 100vh;
   overflow: hidden;
 }
